--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.4.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.4.0</version>
+        </dependency>
 
     </dependencies>
 </project>
