--- a/src/main/resources/ObjectRepository/SauceDemo.properties
+++ b/src/main/resources/ObjectRepository/SauceDemo.properties
@@ -8,6 +8,7 @@ dashboardPage.cart.icon=class:shopping_cart_badge
 dashboardPage.cart.link=class:shopping_cart_link
 dashboardPage.filter.dropdown=class:product_sort_container
 dashboardPage.productNames.text=class:inventory_item_name
+dashboardPage.productPrice.text=class:inventory_item_price
 dashboardPage.allItems.menuButton=xpath://*[contains(@class,"menu-item") and text()="All Items"]
 dashBoardPage.addToCart.xpath=//div[text()='${itemname}' and @class='inventory_item_name']/ancestor::div[@class='inventory_item_label']/following-sibling::div[@class='pricebar']//button[text()='Add to cart']
 dashBoardPage.removeFromCart.xpath=//div[text()='${itemname}' and @class='inventory_item_name']/ancestor::div[@class='inventory_item_label']/following-sibling::div[@class='pricebar']//button[text()='Remove']
