--- a/src/main/resources/ObjectRepository/SauceDemo.properties
+++ b/src/main/resources/ObjectRepository/SauceDemo.properties
@@ -12,3 +12,6 @@ dashboardPage.productPrice.text=class:inventory_item_price
 dashboardPage.allItems.menuButton=xpath://*[contains(@class,"menu-item") and text()="All Items"]
 dashBoardPage.addToCart.xpath=//div[text()='${itemname}' and @class='inventory_item_name']/ancestor::div[@class='inventory_item_label']/following-sibling::div[@class='pricebar']//button[text()='Add to cart']
 dashBoardPage.removeFromCart.xpath=//div[text()='${itemname}' and @class='inventory_item_name']/ancestor::div[@class='inventory_item_label']/following-sibling::div[@class='pricebar']//button[text()='Remove']
+dashboardPage.twitter.icon=xpath://a[text()="Twitter"]
+dashboardPage.facebook.icon=xpath://a[text()="Facebook"]
+dashboardPage.linkedIn.icon=xpath://a[text()="LinkedIn"]
